# pace-2022

./: LICENSE.txt  README.md
heuristic/: CMakeLists.txt  WELL512a.c  WELL512a.h  aux.h  bitmap.h  darray.c  darray.h  graph.c  graph.h  main.c  queue.c  queue.h  reorganize.c  reorganize.h  sa_lib.c  sa_lib.h  sa_state.c  sa_state.h  simulatedAnnealing.c  simulatedAnnealing.h  splayTree.c  splayTree.h
